# logi-linux-app

./: package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: extract-device-images.py  setup-linux.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/hidpp/: Cargo.toml
src-tauri/crates/hidpp/src/: device.rs  error.rs  features.rs  lib.rs  report.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: devices.rs
src/__tests__/: App.test.tsx
src/components/: theme-provider.tsx
src/components/__tests__/: theme-provider.test.tsx
src/components/devices/: device-card-skeleton.tsx  device-card.tsx  device-list.tsx  empty-state.tsx
src/components/devices/__tests__/: device-card.test.tsx
src/components/layout/: sidebar.tsx
src/components/layout/__tests__/: sidebar.test.tsx
src/data/: device-catalog.ts
src/hooks/: use-devices.ts
src/lib/: device-image.ts  tauri.ts
src/pages/: devices.tsx  flow.tsx  settings.tsx
